全面理解应力：从实验到数值分析的转变

--- a/_posts/2025-05-08-实验应力分析技术概述.md
+++ b/_posts/2025-05-08-实验应力分析技术概述.md
@@ -1,31 +1,18 @@
 ---
-title: '实验应力分析：探索材料与结构的微观秘密'
+title: '全面理解应力：从实验到数值分析的转变'
 date: 2025-05-08
-permalink: /posts/2025/05/08/实验应力分析：探索材料与结构的微观秘密
+permalink: /posts/2025/05/08/全面理解应力：从实验到数值分析的转变
 categories: [实验力学, 测量技术]
 tags:
   - 应力测量
   - 光学传感
   - 数值模拟 
 ---
-**实验应力分析：探索材料与结构的微观秘密**  
-![应变场可视化](/images/posts/s00yA-0x480.jpeg){: width="200" .optimized-image }
+**全面理解应力：从实验到数值分析的转变**  
+![应变场可视化](/images/posts/应力偏光仪图.PNG){: width="200" .optimized-image }
 
-> 专题播客：[🔊 实验应力分析：探索材料与结构的微观秘密](https://monica.im/ai-podcast/share?id=08aaca47-fdce-4377-b269-622a256782d6){: .podcast-card target="_blank" }
+> 专题播客：[🔊 全面理解应力：从实验到数值分析的转变](https://monica.im/ai-podcast/share?id=84f3f0a6-ed43-4798-ba19-4155eb13730c){: .podcast-card target="_blank" }
 
-在本期播客中，我们深入探讨实验应力分析的复杂领域，特别关注人类骨骼模型中的应力模式和光学测量技术。
+在本期播客中，我们探讨了理解应力的基本差异，强调了材料强度课程对点应力的关注缺陷，以及如何通过数值技术和实验方法获得更全面的应力、应变和位移信息。
 
-通过焦散法和莫雷法等创新技术，我们揭示了材料在负载下的表现，分享了桥梁建设中的实际案例，以及如何利用有限元分析克服传统方法的局限。
-
-让我们一同探索科学背后隐藏的故事与惊喜！
-
-### 技术解析
-1. **核心测量方法**  
-   - 焦散法：适用于动态载荷下的裂纹扩展分析
-   - 莫尔法：全场位移测量精度达±0.1μm
-   - 数字图像相关(DIC)技术：实现全场应变测量
-
-
-2. **方法对比**  
-   - 光学法：非接触测量但需要表面预处理
-   - 数值法：处理复杂几何但依赖准确边界条件
+通过具体的基准问题示例，包括四点弯曲梁和直径压缩盘，我们展示了传统分析方法在复杂几何体中的局限性，以及数值解决方案和实验验证的重要性。
