--- a/_posts/2025-05-10-实验应力分析的综合方法与应用.md
+++ b/_posts/2025-05-10-实验应力分析的综合方法与应用.md
@@ -10,7 +10,7 @@ tags:
 ---
 
 **实验应力分析的综合方法与应用**  
-![应变场可视化](/images/posts/bpKYq-0x480.jpeg){: width="200" .optimized-image }
+![应变场可视化](/images/posts/带孔板拉伸应力.jpg){: width="200" .optimized-image }
 
 > 专题播客：[🔊 实验应力分析的综合方法与应用](https://monica.im/ai-podcast/share?id=10f1d1fd-c025-420f-bfa6-46e0a0cfab64){: .podcast-card target="_blank" }
 
