--- a/_posts/2025-05-11-实验应力分析的实用指南.md
+++ b/_posts/2025-05-11-实验应力分析的实用指南.md
@@ -9,7 +9,7 @@ tags:
   - 全场应力信息 
 ---
 **深入实验应力分析的探索**  
-![应变场可视化](/images/posts/cr1TB-0x480.jpeg){: width="200" .optimized-image }
+![应变场可视化](/images/posts/光弹性-悬臂.PNG){: width="200" .optimized-image }
 
 > 专题播客：[🔊 深入实验应力分析的探索](https://monica.im/ai-podcast/share?id=ec460ea3-b6bf-446e-b9d0-24e3d3c6a78d){: .podcast-card target="_blank" }
 
