--- a/_posts/2025-05-16-实验应力分析的深度探讨：从梁的弯曲到材料行为的洞察.md
+++ b/_posts/2025-05-16-实验应力分析的深度探讨：从梁的弯曲到材料行为的洞察.md
@@ -10,7 +10,7 @@ tags:
 ---
 
 **实验应力分析的深度探讨：从梁的弯曲到材料行为的洞察**  
-![应变场可视化](/images/posts/9nTmC-0x480.jpeg){: width="200" .optimized-image }
+![应变场可视化](/images/posts/弯曲应力-四点弯.PNG){: width="200" .optimized-image }
 
 > 专题播客：[🔊 实验应力分析的深度探讨：从梁的弯曲到材料行为的洞察](https://monica.im/ai-podcast/share?id=9866d0de-4cf0-4d82-ad22-cb1198765802)
 
