雷达技术的崛起与国防创新

--- a/_posts/2025-07-07-激光雷达与自动驾驶技术的发展.md
+++ b/_posts/2025-07-07-激光雷达与自动驾驶技术的发展.md
@@ -4,8 +4,8 @@ date: 2025-07-07T10:00
 permalink: /posts/2025/07/07/激光雷达与自动驾驶技术的发展
 categories: [雷达, 天线]
 tags:
-  - 单天线
-  - 相控阵
+  - 激光雷达
+  - 自动驾驶
   - 电磁波 
 ---
 
