--- a/_posts/2025-07-08-自动驾驶传感器技术概述.md
+++ b/_posts/2025-07-08-自动驾驶传感器技术概述.md
@@ -4,13 +4,13 @@ date: 2025-07-08T10:00
 permalink: /posts/2025/07/08/自动驾驶传感器技术概述
 categories: [雷达, 天线]
 tags:
-  - 单天线
-  - 相控阵
-  - 电磁波 
+  - 自动驾驶
+  - 激光雷达
+  - 雷达 
 ---
 
 **自动驾驶传感器技术概述**  
-![雷达](/images/posts/激光雷达.jpeg){: width="200" .optimized-image }
+![雷达](/images/posts/自动驾驶.jfif){: width="200" .optimized-image }
 
 
 > 专题播客：[🔊 自动驾驶传感器技术概述](https://monica.im/ai-podcast/share?id=79cab617-d69a-4198-9641-b8c6574cd8e6)
