--- a/_posts/2025-07-06-雷达技术的崛起与国防创新.md
+++ b/_posts/2025-07-06-雷达技术的崛起与国防创新.md
@@ -4,8 +4,8 @@ date: 2025-07-06T10:00
 permalink: /posts/2025/07/06/雷达技术的崛起与国防创新
 categories: [雷达, 天线]
 tags:
-  - 单天线
-  - 相控阵
+  - 雷达
+  - 三坐标雷达
   - 电磁波 
 ---
 
