中国雷达技术的崛起：从挑战到领先的历程

--- a/_posts/2025-07-16-中国雷达技术的崛起：从挑战到领先的历程.md
+++ b/_posts/2025-07-16-中国雷达技术的崛起：从挑战到领先的历程.md
@@ -10,7 +10,7 @@ tags:
 ---
 
 **中国雷达技术的崛起：从挑战到领先的历程**  
-![生产力贴士](/images/posts/人工智能.jpg){: width="200" .optimized-image }
+![雷达](/images/posts/中国雷达.PNG){: width="200" .optimized-image }
 
 
 > 专题播客：[🔊 中国雷达技术的崛起：从挑战到领先的历程](https://monica.im/ai-podcast/share?id=acdc3d94-add5-432c-8466-23b118a39983)
