探索卫星的奥秘：轨道、功能与技术

--- a/_posts/2025-07-24-深度探讨质量的十层理解.md
+++ b/_posts/2025-07-24-深度探讨质量的十层理解.md
@@ -10,7 +10,7 @@ tags:
 ---
 
 **深度探讨质量的十层理解**  
-![分贝](/images/posts/分贝.PNG){: width="200" .optimized-image }
+![质量](/images/posts/质量.jpg){: width="200" .optimized-image }
 
 
 > 专题播客：[🔊 深度探讨质量的十层理解](https://monica.im/ai-podcast/share?id=cf61450a-14e6-40af-a759-538115933570)
